resolved desktop layout issues where columns where not unstacking (going horizontal) properly

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
   --background-heading-button: hsl(0, 0%, 95%);
 
-  --container-padding: 4rem;
+  --container-padding: 3rem;
 }
 
 .btn {
